// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (a2a, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with cognito auth > chat.ts (a2a, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (a2a, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for a2a protocol > should match snapshot for chat scripts with iam auth > chat.ts (a2a, iam) 1`] = `
"// Chat CLI for TestProjectAgent (A2A protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import {
  ClientFactory,
  ClientFactoryOptions,
  DefaultAgentCardResolver,
  JsonRpcTransportFactory,
} from '@a2a-js/sdk/client';
import { A2AChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations/\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default client talks plain HTTP.
const clientFactory = remote
  ? new ClientFactory({
      ...ClientFactoryOptions.default,
      transports: [
        new JsonRpcTransportFactory({
          fetchImpl: createAgentCoreFetch(remote.region),
        }),
      ],
      cardResolver: new DefaultAgentCardResolver({
        fetchImpl: createAgentCoreFetch(remote.region),
      }),
    })
  : undefined;

await chatLoop(new A2AChatAdapter({ clientFactory }), url);
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (ag-ui, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with cognito auth > chat.ts (ag-ui, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch() : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (ag-ui, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for ag-ui protocol > should match snapshot for chat scripts with iam auth > chat.ts (ag-ui, iam) 1`] = `
"// Chat CLI for TestProjectAgent (AG-UI protocol). Connects to the local
// \`dev\` server, or the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { AGUIChatAdapter, chatLoop } from 'agent-chat-cli';
import { createAgentCoreFetch, resolveRemoteAgent } from './agentcore.js';

const remote = await resolveRemoteAgent();

const url = remote
  ? \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}/invocations?qualifier=DEFAULT\`
  : process.env.URL!;

// Remote requests are authenticated via a custom fetch; locally the default agent talks plain HTTP.
const fetchImpl = remote ? createAgentCoreFetch(remote.region) : undefined;

await chatLoop(new AGUIChatAdapter({ fetch: fetchImpl }), url);
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > agentcore.ts (http, cognito) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

/** The Cognito access token used to authenticate with the deployed agent. */
export const getAccessToken = (): string => {
  const accessToken = process.env.AGENT_ACCESS_TOKEN;
  if (!accessToken) {
    throw new Error(
      'AGENT_ACCESS_TOKEN is not set. Provide a Cognito access token to chat with the deployed agent.',
    );
  }
  return accessToken;
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (): typeof fetch => {
  const accessToken = getAccessToken();
  return (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    headers.set('Authorization', \`Bearer \${accessToken}\`);
    return fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with cognito auth > chat.ts (http, cognito) 1`] = `
"// Chat CLI for TestProjectAgent (Python FastAPI / JSONL streaming), using the
// generated client. Connects to the local \`dev\` server, or the deployed
// agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgent } from './generated/client.gen.js';
import {
  createAgentCoreFetch,
  resolveRemoteAgent,
  SESSION_ID,
} from './agentcore.js';

const SESSION_ID_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

const remote = await resolveRemoteAgent();

class TestProjectAgentAdapter implements ChatAdapter {
  private client!: TestProjectAgent;

  async connect(url: string) {
    this.client = remote
      ? new TestProjectAgent({
          url: \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}\`,
          fetch: createAgentCoreFetch(),
        })
      : new TestProjectAgent({
          url,
          fetch: (input, init) => {
            const headers = new Headers(init?.headers);
            headers.set(SESSION_ID_HEADER, SESSION_ID);
            return fetch(input, { ...init, headers });
          },
        });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    for await (const chunk of this.client.invoke({ prompt: text })) {
      if (typeof chunk.content === 'string') yield chunk.content;
    }
  }
}

await chatLoop(new TestProjectAgentAdapter(), process.env.URL ?? '');
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > agentcore.ts (http, iam) 1`] = `
"// Resolves the deployed TestProjectAgent agent from runtime config and authenticates requests to it.
import { randomUUID } from 'node:crypto';
import { getAppConfig } from '@aws-lambda-powertools/parameters/appconfig';
import { fromNodeProviderChain } from '@aws-sdk/credential-providers';
import { AwsClient } from 'aws4fetch';

const SESSION_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

// AgentCore session ids must be at least 33 characters.
export const SESSION_ID = randomUUID().replaceAll('-', '').padEnd(33, '0');

export interface RemoteAgent {
  /** ARN of the deployed Bedrock AgentCore runtime. */
  arn: string;
  /** AWS region parsed from the runtime ARN. */
  region: string;
}

// Returns the deployed agent when \`RUNTIME_CONFIG_APP_ID\` is set, otherwise \`undefined\` to chat locally.
export const resolveRemoteAgent = async (): Promise<
  RemoteAgent | undefined
> => {
  const application = process.env.RUNTIME_CONFIG_APP_ID;
  if (!application) {
    return undefined;
  }
  const config = (await getAppConfig('agentcore', {
    application,
    environment: 'default',
    transform: 'json',
  })) as { agentRuntimes?: Record<string, { arn: string }> };
  const arn = config?.agentRuntimes?.['TestProjectAgent']?.arn;
  if (!arn) {
    throw new Error(
      \`No deployed agent named 'TestProjectAgent' found in runtime configuration (application \${application}).\`,
    );
  }
  return { arn, region: arn.split(':')[3] };
};

// A \`fetch\` that authenticates requests to the deployed agent and forwards the session id.
export const createAgentCoreFetch = (region: string): typeof fetch => {
  const credentialProvider = fromNodeProviderChain();
  return async (input, init) => {
    const headers = new Headers(init?.headers);
    headers.set(SESSION_HEADER, SESSION_ID);
    const client = new AwsClient({
      ...(await credentialProvider()),
      service: 'bedrock-agentcore',
      region,
    });
    return client.fetch(input, { ...init, headers });
  };
};
"
`;

exports[`py#agent generator > chat scripts for http protocol > should match snapshot for chat scripts with iam auth > chat.ts (http, iam) 1`] = `
"// Chat CLI for TestProjectAgent (Python FastAPI / JSONL streaming), using the
// generated client. Connects to the local \`dev\` server, or the deployed
// agent when \`RUNTIME_CONFIG_APP_ID\` is set.
import { chatLoop, type ChatAdapter } from 'agent-chat-cli';
import { TestProjectAgent } from './generated/client.gen.js';
import {
  createAgentCoreFetch,
  resolveRemoteAgent,
  SESSION_ID,
} from './agentcore.js';

const SESSION_ID_HEADER = 'X-Amzn-Bedrock-AgentCore-Runtime-Session-Id';

const remote = await resolveRemoteAgent();

class TestProjectAgentAdapter implements ChatAdapter {
  private client!: TestProjectAgent;

  async connect(url: string) {
    this.client = remote
      ? new TestProjectAgent({
          url: \`https://bedrock-agentcore.\${remote.region}.amazonaws.com/runtimes/\${encodeURIComponent(remote.arn)}\`,
          fetch: createAgentCoreFetch(remote.region),
        })
      : new TestProjectAgent({
          url,
          fetch: (input, init) => {
            const headers = new Headers(init?.headers);
            headers.set(SESSION_ID_HEADER, SESSION_ID);
            return fetch(input, { ...init, headers });
          },
        });
    return { agentName: 'TestProjectAgent' };
  }

  async *sendMessage(text: string): AsyncIterable<string> {
    for await (const chunk of this.client.invoke({ prompt: text })) {
      if (typeof chunk.content === 'string') yield chunk.content;
    }
  }
}

await chatLoop(new TestProjectAgentAdapter(), process.env.URL ?? '');
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-__init__.py 1`] = `""`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-agent.py 1`] = `
"import os

from langchain.agents import create_agent
from langchain_aws import ChatBedrockConverse
from langchain_core.tools import tool

from .session import get_checkpointer

REGION = os.environ.get("AWS_REGION", "us-east-1")
MODEL_ID = os.environ.get("MODEL_ID", "global.anthropic.claude-haiku-4-5-20251001-v1:0")


@tool
def subtract(a: int, b: int) -> int:
    """Subtract b from a."""
    return a - b


def get_agent():
    model = ChatBedrockConverse(model=MODEL_ID, region_name=REGION)
    return create_agent(
        model=model,
        tools=[subtract],
        system_prompt="""
You are a mathematical wizard.
Use your tools for mathematical tasks.
Refer to tools as your 'spellbook'.
""",
        checkpointer=get_checkpointer(),
    )
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-main.py 1`] = `
"import logging
import time
import uuid
from contextlib import asynccontextmanager

from ag_ui.core import EventType, RunAgentInput, RunErrorEvent
from ag_ui.encoder import EventEncoder
from ag_ui_langgraph import LangGraphAgent
from fastapi import FastAPI, Request
from fastapi.middleware.cors import CORSMiddleware
from fastapi.responses import JSONResponse, StreamingResponse
from proj_agent_connection import get_current_session_id, session_id_context

from .agent import get_agent
from .middleware.session_id_middleware import SESSION_ID_HEADER, SessionIdMiddleware

logging.basicConfig(level=logging.INFO)


@asynccontextmanager
async def lifespan(app: FastAPI):
    graph = get_agent()
    app.state.agui_agent = LangGraphAgent(
        name="SnapshotAgent",
        graph=graph,
        description="A LangChain/LangGraph Agent exposed via the AG-UI protocol.",
    )
    yield


app = FastAPI(title="SnapshotAgent", lifespan=lifespan)
# Allow browser-based AG-UI clients (e.g. a connected React website) to call
# this agent cross-origin, including the CORS preflight.
app.add_middleware(
    CORSMiddleware,
    allow_origins=["*"],
    allow_credentials=True,
    allow_methods=["*"],
    allow_headers=["*"],
)
app.add_middleware(SessionIdMiddleware)


@app.post("/invocations")
async def invocations(request: Request):
    # Validate the body manually since AgentCore may omit Content-Type.
    accept = request.headers.get("accept") or ""
    encoder = EventEncoder(accept=accept)
    raw = await request.body()
    try:
        input_data = RunAgentInput.model_validate_json(raw)
    except Exception as exc:
        message = f"Invalid RunAgentInput: {str(exc)[:200]}"

        async def _bad():
            yield encoder.encode(
                RunErrorEvent(
                    type=EventType.RUN_ERROR, message=message, code="BAD_REQUEST"
                )
            )

        return StreamingResponse(_bad(), media_type=encoder.get_content_type())

    session_id = request.headers.get(SESSION_ID_HEADER) or get_current_session_id()

    async def event_generator():
        # Re-bind the session: the streaming body runs outside the middleware.
        with session_id_context(session_id or str(uuid.uuid4())):
            try:
                async for event in request.app.state.agui_agent.run(input_data):
                    yield encoder.encode(event)
            except Exception as e:
                yield encoder.encode(
                    RunErrorEvent(
                        type=EventType.RUN_ERROR,
                        message=str(e)[:300],
                        code="AGENT_ERROR",
                    )
                )

    return StreamingResponse(event_generator(), media_type=encoder.get_content_type())


@app.get("/ping")
async def ping():
    return JSONResponse({"status": "Healthy", "time_of_last_update": int(time.time())})
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-pyproject.toml 1`] = `
"[project]
name = "proj.test_project"
version = "0.1.0"
dependencies = [
  "proj-agent-connection",
  "aws-lambda-powertools==3.34.0",
  "aws-opentelemetry-distro==0.19.0",
  "bedrock-agentcore==1.22.0",
  "boto3==1.43.83",
  "fastapi==0.141.1",
  "mcp==1.28.1",
  "langchain==1.3.18",
  "langchain-aws==1.7.4",
  "langgraph==1.2.11",
  "langgraph-checkpoint-sqlite==3.1.1",
  "aiosqlite==0.22.1",
  "ag-ui-protocol==0.1.21",
  "ag-ui-langgraph==0.0.44",
  "uvicorn==0.52.4"
]

[dependency-groups]
dev = [ "fastapi[standard]==0.141.1" ]

[tool.uv]
dev-dependencies = [ ]

[tool.uv.sources.proj-agent-connection]
workspace = true
"
`;

exports[`py#agent generator > langchain framework > should match snapshot for langchain generated files > langchain-session.py 1`] = `
"import os

import aiosqlite
import boto3
from langgraph.checkpoint.base import BaseCheckpointSaver
from langgraph.checkpoint.sqlite.aio import AsyncSqliteSaver
from proj_agent_connection.core.runtime_config import get_agentcore_runtime_config
from proj_agent_connection.core.s3_checkpoint_saver_langchain import S3CheckpointSaver


def get_checkpointer() -> BaseCheckpointSaver:
    """Returns a LangGraph checkpointer for persisting conversation state across
    invocations. Local development always uses a local SQLite database for
    convenience, regardless of the configured session option.
    """
    if os.environ.get("LOCAL_DEV") == "true":
        os.makedirs("../../tmp/agents/langchain/snapshot-agent", exist_ok=True)
        conn = aiosqlite.connect(
            os.path.join(
                "../../tmp/agents/langchain/snapshot-agent", "checkpoints.sqlite"
            )
        )
        return AsyncSqliteSaver(conn)

    config = get_agentcore_runtime_config()
    session_config = (
        (config.get("agentRuntimes") or {}).get("SnapshotAgent", {}).get("session", {})
    )
    bucket_name = session_config.get("bucketName")
    if not bucket_name:
        raise RuntimeError(
            "No S3 checkpoint bucket configured for this agent in runtime configuration."
        )
    return S3CheckpointSaver(
        bucket_name=bucket_name,
        prefix="checkpoints/",
        s3_client=boto3.client("s3"),
    )
"
`;
